<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_template"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:layout_scrollFlags="enterAlways|scroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bar_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/actionbar_menu"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/bar_mine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/toolbar_mine_text"
                android:textColor="@color/initColor" />

            <TextView
                android:id="@+id/bar_find"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/toolbar_find_text"
                android:textColor="@color/initColor" />

            <TextView
                android:id="@+id/bar_cloud_village"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/toolbar_cloud_village_text"
                android:textColor="@color/initColor" />

            <TextView
                android:id="@+id/bar_video"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/toolbar_video_text"
                android:textColor="@color/initColor" />

            <ImageView
                android:id="@+id/bar_search"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/actionbar_search"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/activity_main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

<!--    <FrameLayout-->
<!--        android:id="@+id/bottom_container"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="80dp" >-->
<!--        <include layout="@layout/bottom_music_display"/>-->
<!--    </FrameLayout>-->
</LinearLayout>