<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/draw_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/activity_main_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/activity" />
    </FrameLayout>

    <include layout="@layout/bottom_music_display" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer">

        <RelativeLayout
            android:id="@+id/nav_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_navigation_bottom_layout_height"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/home_navigation_bottom_image_height_and_width"
                    android:layout_height="@dimen/home_navigation_bottom_image_height_and_width"
                    android:layout_marginStart="@dimen/home_navigation_bottom_margin"
                    android:layout_marginLeft="@dimen/home_navigation_bottom_margin"
                    android:src="@drawable/home_navigation_bottom_night_mode"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/night_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/home_navigation_bottom_margin"
                    android:layout_marginLeft="@dimen/home_navigation_bottom_margin"
                    android:text="@string/nav_drawer_bottom_night_mode" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/home_navigation_bottom_image_height_and_width"
                    android:layout_height="@dimen/home_navigation_bottom_image_height_and_width"
                    android:layout_marginStart="@dimen/home_navigation_bottom_margin"
                    android:layout_marginLeft="@dimen/home_navigation_bottom_margin"
                    android:src="@drawable/setting"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/home_navigation_bottom_margin"
                    android:layout_marginLeft="@dimen/home_navigation_bottom_margin"
                    android:text="@string/nav_drawer_bottom_setting" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/home_navigation_bottom_image_height_and_width"
                    android:layout_height="@dimen/home_navigation_bottom_image_height_and_width"
                    android:layout_marginStart="@dimen/home_navigation_bottom_margin"
                    android:layout_marginLeft="@dimen/home_navigation_bottom_margin"
                    android:src="@drawable/home_navigation_bottom_quit"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/quit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/home_navigation_bottom_margin"
                    android:layout_marginRight="@dimen/home_navigation_bottom_margin"
                    android:text="@string/nav_drawer_bottom_quit" />
            </LinearLayout>

        </RelativeLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>